# tributary-cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/: cppcoro.txt.in  gtest.txt.in  libuv.txt.in
include/tributary/: base.h  base.hpp  lazy.h  lazy.hpp  streaming.h  streaming.hpp  types.hpp  utils.h  utils.hpp
include/tributary/lazy/: node.h  node.hpp
include/tributary/streaming/: input.h  input.hpp  node.h  node.hpp  output.h  output.hpp
scripts/: fix.sh  lint.sh
src/: base.cpp  lazy.cpp  streaming.cpp  utils.cpp
src/include/tributary/: base.h
test/: test_base.cpp  test_lazy.cpp  test_nongtest.cpp  test_streaming.cpp
